Pokedex semi done

--- a/.gitignore
+++ b/.gitignore
@@ -8,22 +8,25 @@
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
-/dist
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# Environment Variables
-.env
-.env.build
+# local env files
+.env*.local
+
+# vercel
 .vercel
